@@ -17,6 +17,7 @@ import ru.petspring.manti.service.implService.TaskServiceImpl;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -45,17 +46,20 @@ public class TaskServiceTest {
        userEntity.setId(userId);
        userEntity.setName("NameUser");
 
-        TaskEntity taskEntity = new TaskEntity();
-        taskEntity.setTitle("Title");
-        taskEntity.setDescription("Description");
-        taskEntity.setDueDate(LocalDate.now());
-        taskEntity.setStatus(FilterByStatus.TODO);
+        TaskDTO taskDTO = new TaskDTO();
+        taskDTO.setTitle("Title");
+        taskDTO.setDescription("Description");
+        taskDTO.setDueDate(LocalDate.now());
+        taskDTO.setStatus(FilterByStatus.TODO);
+        TaskEntity taskEntity = TaskEntity.toEntityTask(taskDTO);
         taskEntity.setUserEntity(userEntity);
+
+
 
         when(userRepository.findById(userId)).thenReturn(Optional.of(userEntity));
         when(taskRepository.save(taskEntity)).thenReturn(taskEntity);
 
-        TaskDTO result = taskService.createTask(taskEntity, userId);
+        TaskDTO result = taskService.createTask(taskDTO, userId);
 
         assertNotNull(result);
         assertEquals("Title", result.getTitle());
@@ -74,14 +78,13 @@ public class TaskServiceTest {
         taskEntity.setId(taskId);
         taskEntity.setUserEntity(userEntity);
 
-        when(userRepository.findById(userId)).thenReturn(Optional.of(userEntity));
         when(taskRepository.findById(taskId)).thenReturn(Optional.of(taskEntity));
 
         taskService.deleteTask(taskId, userId);
 
         assertEquals(0, taskRepository.findAll().size());
 
-        Mockito.verify(taskRepository).deleteByIdAndUserEntity_Id(taskId,userId);
+        verify(taskRepository).delete(taskEntity);
 
     }
     @Test
@@ -92,25 +95,25 @@ public class TaskServiceTest {
         UserEntity userEntity = new UserEntity();
         userEntity.setId(userId);
 
-        TaskEntity taskEntity = new TaskEntity();
-        taskEntity.setId(1L);
-        taskEntity.setTitle("Test Title");
-        taskEntity.setDescription("Test Description");
-        taskEntity.setDueDate(LocalDate.now());
-        taskEntity.setStatus(FilterByStatus.TODO);
-        taskEntity.setUserEntity(userEntity);
+        TaskEntity taskEntity1 = new TaskEntity();
+        taskEntity1.setId(1L);
+        taskEntity1.setTitle("Test Title");
+        taskEntity1.setDescription("Test Description");
+        taskEntity1.setDueDate(LocalDate.now());
+        taskEntity1.setStatus(FilterByStatus.TODO);
+        taskEntity1.setUserEntity(userEntity);
 
         TaskEntity taskEntity2 = new TaskEntity();
         taskEntity2.setId(2L);
-        taskEntity2.setTitle("Test Title");
-        taskEntity2.setDescription("Test Description");
+        taskEntity2.setTitle("Test Title2");
+        taskEntity2.setDescription("Test Description2");
         taskEntity2.setDueDate(LocalDate.now());
         taskEntity2.setStatus(FilterByStatus.DONE);
         taskEntity2.setUserEntity(userEntity);
 
-        when(userRepository.findById(userId)).thenReturn(Optional.of(userEntity));
+        when(userRepository.existsById(userId)).thenReturn(true);
         when(taskRepository.findByStatusAndUserEntity_Id(status, userId))
-                .thenReturn(Collections.singletonList(taskEntity));
+                .thenReturn(List.of(taskEntity1));
 
         List<TaskDTO> result = taskService.filterTasksByStatus(status, userId);
 
@@ -138,60 +141,78 @@ public class TaskServiceTest {
        assertTaskEntity2.setId(2L);
        assertTaskEntity2.setTitle("Test Title2");
        assertTaskEntity2.setDueDate(LocalDate.now().plusDays(2));
-       assertTaskEntity2.setStatus(FilterByStatus.TODO);
+       assertTaskEntity2.setStatus(FilterByStatus.DONE);
        assertTaskEntity2.setUserEntity(userEntity);
 
-       when(userRepository.findById(userId)).thenReturn(Optional.of(userEntity));
-       when(taskRepository.sortTasks(sortByDate, userId))
-               .thenReturn(Collections.singletonList(assertTaskEntity));
+       when(userRepository.existsById(userId)).thenReturn(true);
+       when(taskRepository.findAllByUserEntityIdOrderByDueDateAsc(userId))
+               .thenReturn(Arrays.asList(assertTaskEntity, assertTaskEntity2));
+       when(taskRepository.findAllByUserEntityIdOrderByStatusAsc(userId))
+               .thenReturn(Arrays.asList(assertTaskEntity2, assertTaskEntity));
 
        List<TaskDTO> resultSortByDate = taskService.sortTasks(sortByDate, userId);
+
        assertNotNull(resultSortByDate);
-       assertEquals(1, resultSortByDate.size());
+       assertEquals(2, resultSortByDate.size());
        assertEquals("Test Title", resultSortByDate.get(0).getTitle());
 
-       when(taskRepository.sortTasks(sortByStatus, userId))
-               .thenReturn(Collections.singletonList(assertTaskEntity2));
-
        List<TaskDTO> resultSortByStatus = taskService.sortTasks(sortByStatus, userId);
-       assertNotNull(resultSortByStatus);
-       assertEquals(1, resultSortByStatus.size());
-       assertEquals(FilterByStatus.TODO, resultSortByStatus.get(0).getStatus());
 
-       verify(userRepository,times(2)).findById(userId);
-       verify(taskRepository).sortTasks(sortByDate, userId);
-   }
+       assertNotNull(resultSortByStatus);
+       assertEquals(2, resultSortByStatus.size());
+       assertEquals(FilterByStatus.DONE, resultSortByStatus.get(0).getStatus());
+
+       verify(userRepository,times(2)).existsById(userId);
+  }
     @Test
     public void testUpdateTask(){
 
+        Long userId = 1L;
         Long taskId = 1L;
 
+        UserEntity userEntity = new UserEntity();
+        userEntity.setId(1L);
+
         TaskEntity existingTask = new TaskEntity();
-        existingTask.setId(taskId);
+        existingTask.setId(1L);
         existingTask.setTitle("Old Title");
         existingTask.setDescription("Old Description");
         existingTask.setStatus(FilterByStatus.TODO);
         existingTask.setDueDate(LocalDate.now());
+        existingTask.setUserEntity(userEntity);
 
-        TaskEntity updatedTask = new TaskEntity();
-        updatedTask.setTitle("New Title");
-        updatedTask.setDescription("New Description");
-        updatedTask.setStatus(FilterByStatus.IN_PROGRESS);
-        updatedTask.setDueDate(LocalDate.now().plusDays(1));
+        TaskDTO updatedTaskAll = new TaskDTO();
+        updatedTaskAll.setId(2L);
+        updatedTaskAll.setTitle("New Title");
+        updatedTaskAll.setDescription("New Description");
+        updatedTaskAll.setStatus(FilterByStatus.IN_PROGRESS);
+        updatedTaskAll.setDueDate(LocalDate.now().plusDays(1));
+        //updatedTaskAll.setUserEntity(userEntity);
+
+        TaskDTO updatedTaskWithNullFields = new TaskDTO();
+
+        updatedTaskWithNullFields.setDescription("Description");
+        updatedTaskWithNullFields.setStatus(FilterByStatus.DONE);
+
 
         when(taskRepository.findById(taskId)).thenReturn(Optional.of(existingTask));
         when(taskRepository.save(existingTask)).thenReturn(existingTask);
 
-        // Act
-        TaskDTO result = taskService.updateTask(taskId, updatedTask);
+        TaskDTO result = taskService.updateTask(taskId, updatedTaskAll, userId);
 
-        // Assert
         assertNotNull(result);
         assertEquals("New Title", result.getTitle());
         assertEquals("New Description", result.getDescription());
         assertEquals(FilterByStatus.IN_PROGRESS, result.getStatus());
 
-        verify(taskRepository, times(1)).findById(taskId);
-        verify(taskRepository, times(1)).save(existingTask);
+        TaskDTO resultWithNullFields = taskService.updateTask(taskId, updatedTaskWithNullFields,userId);
+
+        assertNotNull(result);
+        assertEquals("New Title", resultWithNullFields.getTitle());
+        assertEquals("Description", resultWithNullFields.getDescription());
+        assertEquals(FilterByStatus.DONE, resultWithNullFields.getStatus());
+
+        verify(taskRepository, times(2)).findById(taskId);
+        verify(taskRepository, times(2)).save(existingTask);
     }
 }
